--- a/grafiks/templates/add_plan.html
+++ b/grafiks/templates/add_plan.html
@@ -6,10 +6,30 @@
 {% endblock %}
 
 {% block content %}
+
+<script>
+function showMe (box) {
+ var chboxs = document.getElementsByName("chk");
+ var vis = "block";
+ for(var i=0;i<chboxs.length;i++) { if(chboxs[i].checked){ vis = "none"; break; }}
+    document.getElementById(box).style.display = vis; }
+</script>
+
 <form action="/reception/add/" method="post"><div class="col-md-6 col-md-offset-3">{% csrf_token %}
+
+{% if message %}
+ <div class="alert alert-success" role="alert">
+  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span><strong> &nbsp;&nbsp;&nbsp;{{ message }}</strong>
+ </div>
+{% endif %}
 
 <div class="alert alert-danger">
   <center><strong>!!! Nodarbību pievienošana grafikam !!!</strong></center>
+</div>
+
+<div class="alert alert-danger" style="margin-top:10px;">
+ <center><strong>Uzmanību!</strong> <i><b>"ĶEKSI"</b></i> liek tikai ja Nodarbība ir paredzēta <b>TIKAI</b> vienu reizi.</center>
+ <center><strong>Uzmanību!</strong> izvēlamies datumu no kura sākot nodarbība būs pieejama, vai kurā datumā tā būs (ja ir <i><b>"ĶEKSIS"</b></i>).</center>
 </div>
 
 <div class="alert alert-warning" style="margin-top:10px;">
@@ -17,16 +37,23 @@
  <center>Pievienojot vienu nodarbību datuma izvēle notiek <i><b>"lejā"</b></i></center>
 </div>
 
-{% if message %}
- <div class="alert alert-success" role="alert">
-  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span><strong> {{ message }}</strong>
- </div>
-{% endif %}
- <div class="fieldWrapper">
+<div class="bootstrap-iso"><div class="fieldWrapper"><div class="row">
+ <div class="col-md-4"><label style="margin-left:10px;"><input id="chk" name="chk" type="checkbox" onclick="showMe('diena')"> Vienu reizi</label></div>
+ <div class="col-md-7"><div class="form-group"><input class="form-control" id="date" name="date" placeholder="spied šeit lai izvēlētos datumu" type="text"/></div></div>
+</div></div></div>
+
+<script>
+$(document).ready(function(){ var date_input=$('input[name="date"]'); var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
+ var options={ format: 'dd/mm/yyyy', container: container, todayHighlight: true, autoclose: true, weekStart: 1, }; date_input.datepicker(options); })
+</script>
+
+ <div class="fieldWrapper" id="diena">
   <label for="{{ form.diena.id_for_label }}">Diena:</label>
   {{ form.diena.errors }}
   {{ form.diena }}
  </div>
+
+
  <div class="fieldWrapper">
   <label for="{{ form.laiks.id_for_label }}">Sākums:</label>
   {{ form.laiks.errors }}
@@ -65,23 +92,8 @@
  </div>
 <br>
 
-<div class="alert alert-danger" style="margin-top:10px;">
- <center><strong>Uzmanību!</strong> <i><b>"ĶEKSI"</b></i> liek tikai ja Nodarbība ir paredzēta <b>TIKAI</b> vienu reizi.</center>
- <center><strong>Uzmanību!</strong> izvēlamies datumu no kura sākot nodarbība būs pieejama, vai kurā datumā tā būs (ja ir <i><b>"ĶEKSIS"</b></i>).</center>
-</div>
-
-<div class="bootstrap-iso"><div class="fieldWrapper"><div class="row">
- <div class="col-md-4"><label style="margin-left:10px;"><input id="chk" name="chk" type="checkbox"> Vienu reizi</label></div>
- <div class="col-md-7"><div class="form-group"><input class="form-control" id="date" name="date" placeholder="spied šeit lai izvēlētos datumu" type="text"/></div></div>
-</div></div></div>
-
-<script>
-$(document).ready(function(){ var date_input=$('input[name="date"]'); var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
- var options={ format: 'dd/mm/yyyy', container: container, todayHighlight: true, autoclose: true, weekStart: 1, }; date_input.datepicker(options); })
-</script>
-
  <div class="form-group text-right">
-  <input class="btn btn-danger" type="submit" value="Pievienot nodarbību grafikam">
+  <input class="btn btn-success" type="submit" value="Pievienot nodarbību grafikam">
  </div>
 
 </div></form>
