--- a/grafiks/templates/history.html
+++ b/grafiks/templates/history.html
@@ -7,6 +7,11 @@
 
 {% block history_header %}
 
+<h2></h2>
+<div class="alert alert-warning">
+ <center><strong>!!! Vēsture !!!</strong></center>
+</div>
+
 <div class="bootstrap-iso" style="padding-top:20px;"><div class="container-fluid" style="margin-bottom:-20px;"><div class="row">
  <form action="/reception/hist/" method="post">{% csrf_token %}
   <div class="col-md-3 col-sm-4"><div class="form-group"><input class="form-control" id="date" name="date" placeholder="spied šeit lai izvēlētos datumu" type="text"/></div></div>
@@ -27,9 +32,5 @@
       date_input.datepicker(options);
     })
 </script>
-
-<!-- <div class="alert alert-warning"> -->
-<!--  <center><strong>Svarīgi!</strong> Šajā sadaļā ir iespējams aplūkot tikai datus par jau notikušām nodarbībām!</center> -->
-<!-- </div> -->
 
 {% endblock %}
