--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,6 +12,9 @@
 {% block javascript %}{% endblock %}
 <style>
 
+.navbar-xs .navbar-default .navbar-nav .open .dropdown-menu>li>a, .navbar-default .navbar-nav .open .dropdown-menu {
+  background-color: #FF8080; }
+
 .navbar-default { background-color: #eee; border-bottom: 1px solid #ddd !important; }
 .divider-vertical { height: 50px; border-right: 2px solid #ccc; }
 
@@ -20,10 +23,10 @@
 <body>
 
 <div class="modal fade" id="Help" tabindex="-1" role="dialog" aria-hidden="true">
-<div class="modal-dialog"><div class="modal-content" data-dismiss="modal">
+<div class="modal-dialog" style="margin-top:100px;"><div class="modal-content" data-dismiss="modal">
 <div class="modal-body">
- <h3 style="margin-top:5px;"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></h3>
- <center><h4>Jautājumi par sistēmu - Aleksandrs &nbsp;<span class="glyphicon glyphicon-phone-alt"></span> &nbsp;22458469</h4></center>
+ <center><h4 style="margin-top:5px;"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+ Jautājumi par sistēmu - Aleksandrs &nbsp;<span class="glyphicon glyphicon-phone-alt"></span> &nbsp;22458469</h4></center>
 </div></div></div></div>
 
 <nav class="navbar-xs navbar-default">
@@ -37,16 +40,15 @@
   <li><a href="/reception/"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> &nbsp;Nodarbību pieraksti</a></li>
   <li><a target="_blank" href="/admin/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if super %}
-  <li style="background-color: #FF8080; color: #FFC0CB;"><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
-  <li style="background-color: #FF8080; color: #FFC0CB;" class="dropdown">
+  <li style="background-color: #FF8080;"><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
+  <li style="background-color: #FF8080;"><a href="/reception/tren/"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> &nbsp;Treneru aizvietošana</a></li>
+  <li style="background-color: #FF8080;" class="dropdown">
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
      <span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;izmaiņas grafikā&nbsp;<span class="caret"></span></a>
     <ul class="dropdown-menu">
-     <li><a href="/reception/add/">Pievienot nodarbību</a></li>
-     <li role="separator" class="divider"></li>
-     <li><a href="#">Noņemt nodarbību</a></li>
-     <li role="separator" class="divider"></li>
-     <li><a href="#">Treneru aizvietošana</a></li>
+     <li><a href="/reception/add/"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Pievienot nodarbību grafikam/plānotājam</a></li>
+<!--     <li role="separator" class="divider"></li> -->
+     <li><a href="#"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Izņemt nodarbību no plānotāja</a></li>
     </ul>
   </li>
 <!--  <li class="divider-vertical"></li> -->
