--- a/grafiks/templates/add_plan.html
+++ b/grafiks/templates/add_plan.html
@@ -6,7 +6,6 @@
 {% endblock %}
 
 {% block content %}
-
 <div class="modal fade" id="Pievienots" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content">
 <div class="modal-header">
  <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;&nbsp;Nodarbība pievienota</h3>
@@ -33,7 +32,6 @@
  <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button>
 </div></div></div></div>
 
-
 <script>
 window.onload = success_modal;
 function success_modal() {
@@ -50,7 +48,7 @@ function showMe (box) {
 <form action="/reception/add/" method="post">{% csrf_token %}
 
 <div class="alert alert-danger">
-  <center><strong>!!! Nodarbību pievienošana grafikam !!!</strong></center>
+  <center><strong>!!! Nodarbību pievienošana Grafikam !!!</strong></center>
 </div>
 
 {% if error %}
@@ -60,13 +58,16 @@ function showMe (box) {
 {% endif %}
 
 <div class="alert alert-warning" style="margin-top:10px;">
- <center><strong>Svarīgi!</strong> Ja nodarbība tiek pievienota <b>VIENU</b> reizi, tad datuma izvēle notiek <i><b>"lejā"</b></i></center>
- <center>Pretējā gadījumā datuma izvēle nozīmē no kura laika sākas nodarbības.</center>
+ <center><strong>Svarīgi!</strong> Ja nodarbība tiek pievienota <b>VIENU</b> reizi, tad nodarbība notiks <b>izvēlētajā datumā</b></center>
+ <center>Pretējā gadījumā datuma izvēle nozīmē pēc kura datuma <b><i>(ieskaitot)</i></b> nodarbības tiks pievienotas.</center>
 </div>
 
 <div class="bootstrap-iso"><div class="fieldWrapper"><div class="row">
- <div class="col-md-4"><label style="margin-left:10px;"><input id="chk" name="chk" type="checkbox" onclick="showMe('diena')"> Vienu reizi</label></div>
- <div class="col-md-7"><div class="form-group"><input class="form-control" id="date" name="date" placeholder="spied šeit lai izvēlētos datumu" type="text"/></div></div>
+ <div class="col-md-4"><label style="margin-left:10px;">{{ form.chk }} Vienu reizi</label></div>
+ <div class="col-md-7"><div class="form-group">
+ {{ form.date }}
+ {{ form.date.errors }}
+</div></div>
 </div></div></div>
 
 <script>
@@ -76,20 +77,20 @@ $(document).ready(function(){ var date_input=$('input[name="date"]'); var contai
 
  <div class="fieldWrapper" id="diena">
   <label for="{{ form.diena.id_for_label }}">Diena:</label>
-  {{ form.diena.errors }}
   {{ form.diena }}
+  {{ form.diena.errors }}
  </div>
 
 
  <div class="fieldWrapper">
   <label for="{{ form.laiks.id_for_label }}">Sākums:</label>
-  {{ form.laiks.errors }}
   {{ form.laiks }}
+  {{ form.laiks.errors }}
  </div>
  <div class="fieldWrapper">
   <label for="{{ form.ilgums.id_for_label }}">Nodarbības ilgums:</label>
-  {{ form.ilgums.errors }}
   {{ form.ilgums }}
+  {{ form.ilgums.errors }}
  </div>
 
 <div class="alert alert-warning" style="margin-top:10px;">
@@ -98,26 +99,30 @@ $(document).ready(function(){ var date_input=$('input[name="date"]'); var contai
 
  <div class="fieldWrapper">
   <label for="{{ form.nodarbiba.id_for_label }}">Nodarbība:</label>
-  {{ form.nodarbiba.errors }}
   {{ form.nodarbiba }}
+  {{ form.nodarbiba.errors }}
  </div>
  <div class="fieldWrapper">
   <label for="{{ form.treneris.id_for_label }}">Treneris:</label>
-  {{ form.treneris.errors }}
   {{ form.treneris }}
+  {{ form.treneris.errors }}
  </div>
 
  <div class="fieldWrapper">
   <label for="{{ form.telpa.id_for_label }}">Telpa:</label>
-  {{ form.telpa.errors }}
   {{ form.telpa }}
+  {{ form.telpa.errors }}
  </div>
  <div class="fieldWrapper">
   <label for="{{ form.vietas.id_for_label }}">Vietu skaits:</label>
-  {{ form.vietas.errors }}
   {{ form.vietas }}
+  {{ form.vietas.errors }}
  </div>
 <br>
+
+{{ days }}<br><br>
+{{ days_to_add }}<br><br>
+{{ print }}
 
  <div class="form-group text-right">
   <input class="btn btn-success" type="submit" value="Pievienot nodarbību grafikam">
