--- a/templates/admin.html
+++ b/templates/admin.html
@@ -40,7 +40,7 @@
   <li><a href="/reception/"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> &nbsp;Nodarbību pieraksti</a></li>
   <li><a target="_blank" href="/admin/klienti/klienti/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Klientu dati</a></li>
 {% if super %}
-  <li style="background-color: #FF8080;"><a href="/reception/plan/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
+  <li style="background-color: #FF8080;"><a href="/reception/graf/"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> &nbsp;Atcelt nodarbību</a></li>
   <li style="background-color: #FF8080;"><a href="/reception/tren/"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> &nbsp;Treneru aizvietošana</a></li>
   <li style="background-color: #FF8080;" class="dropdown">
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -48,7 +48,7 @@
     <ul class="dropdown-menu">
      <li><a href="/reception/add/"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;Pievienot nodarbību grafikam/plānotājam</a></li>
 <!--     <li role="separator" class="divider"></li> -->
-     <li><a href="#"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Izņemt nodarbību no plānotāja</a></li>
+     <li><a href="/reception/plan/"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Izņemt nodarbību no plānotāja</a></li>
     </ul>
   </li>
 <!--  <li class="divider-vertical"></li> -->
