--- a/grafiks/templates/rec_pierakst.html
+++ b/grafiks/templates/rec_pierakst.html
@@ -1,9 +1,10 @@
 {% extends 'admin.html' %}
 
 {% block rec_pieraksts %}
-<a href="/reception/day/{{ d_id }}/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br>
+<a href="/reception/day/{{ d_id }}/"><button type="button" class="btn btn" style="colour: black;">
+<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br>
 
-<div class="col-lg-4 col-md-4 col-lg-offset-4 col-md-offset-4">
+<div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3">
 
 <div class="alert alert-danger">
   <center><strong>Svarīgi!</strong> Vadot klienta datus, ja klients ir jau reģistrējies e-pasts uzrādīsies no WEB pieraksta</center>
@@ -20,6 +21,14 @@
   <strong>&nbsp;&nbsp; {{ msg }}</strong>
  </div>
 {% endif %}
+
+{% if tel_msg %}
+ <div class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-alert" aria-hidden="true"> </span>
+  <strong>&nbsp;&nbsp; Norādīto tālruņa numuru lieto vairākas personas!</strong>
+ </div>
+{% endif %}
+
 {% if error %}
  <div class="alert alert-danger" role="alert">
   <span class="glyphicon glyphicon-alert" aria-hidden="true"> </span>
