--- a/grafiks/templates/del_plan.html
+++ b/grafiks/templates/del_plan.html
@@ -30,6 +30,10 @@ jQuery(document).ready(function($) {
   <center><strong>!!! Nodarbību Izņemšanas no Plānotāja !!!</strong></center>
 </div>
 
+<div class="alert alert-danger">
+  <center><strong>!!! Tiek veiktas izmaiņas <i>NEAIZTIKT :)</i> !!!</strong></center>
+</div>
+
 {% for dat in data %}{% for d in dat %}
 <div class="modal fade" id="Plan{{ d.id }}" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header">
  <span class="glyphicon glyphicon-trash" aria-hidden="true" style="font-size:1.5em;"></span>
