--- a/grafiks/templates/tren_aizv.html
+++ b/grafiks/templates/tren_aizv.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div class="alert alert-danger">
-  <center><strong>!!! Treneru aizvietošana !!!</strong>
+  <center><strong>!!! Treneru aizvietošana VIENAI NODARBĪBAI !!!</strong>
 </center>
 </div>
 
