--- a/grafiks/templates/del_plan.html
+++ b/grafiks/templates/del_plan.html
@@ -42,7 +42,7 @@ jQuery(document).ready(function($) {
  <h3>{{ d.get_diena_display }}&nbsp;&nbsp;&nbsp;{{ d.laiks|date:"H:i" }}&nbsp;&nbsp;&nbsp;{{ d.ilgums }}minūtes</h3>
  <h3>&nbsp;{{ d.nodarbiba }}&nbsp;&nbsp;&nbsp;{{ d.treneris }}</h3>
 
-<form action="/reception/plan/{{ d.id }}" method="post">{% csrf_token %}
+<form action="/reception/plan/{{ d.id }}/" method="post">{% csrf_token %}
  <div class="form-group">
   <input class="form-control" id="date" name="date" placeholder="spied šeit lai izvēlētos datumu" type="text"/>
  </div>
