--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -4,7 +4,10 @@
 {% block style %}
 span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 0; background-image: url( {% static 'empty.png' %} ); }
 p{ padding:0px; margin:0px; text-align: left; }
-#nod{ position: relative; width: 32.7%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black; background-color:#ccc; float:left; overflow:hidden; }
+#nod{ position: relative; width: 32.7%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black;
+background-color:#ccc; float:left; overflow:hidden; }
+#nod_special{ position: relative; width: 32.7%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black;
+background-color:red; float:left; overflow:hidden; }
 #triangle{ position:absolute; width:20px; height:20px; right:0px; bottom:0px; /* margin-bottom:1px; margin-right:1px;*/ z-index:1; }
 .modal-backdrop { opacity:0.8 !important; }
 {% endblock %}
@@ -16,15 +19,15 @@ p{ padding:0px; margin:0px; text-align: left; }
 <div class="modal-dialog"><div class="modal-content" data-dismiss="modal">
 <div class="modal-body">
  <h3 style="margin-top:5px;"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></h3>
- <h4>{{ n.apraksts }}</h4>
+ <h4>{{ n.apraksts|safe }}</h4>
 </div></div></div></div>
 {% endfor %}
 
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 {% for n in nodarbibas %}
-<div id="nod">
+{% if n.izcelt %}<div id="nod_special">{% else %}<div id="nod">{% endif %}
  <a href="/tren/{{ n.slug }}/"><span></span></a>
- <p>{{ n.nos }}</p>
+ <p>{% if n.izcelt %}<strong>{{ n.nos }}</strong>{% else %}{{ n.nos }}{% endif %}</p>
  <a href="#" data-toggle="modal" data-target="#Nodarb{{ forloop.counter0 }}">
 <img src="{% static 'question.png' %}" id="triangle"></a>
 </div>
