--- a/grafiks/templates/tren_aizv.html
+++ b/grafiks/templates/tren_aizv.html
@@ -6,8 +6,11 @@
 {% block content %}
 
 <div class="alert alert-danger">
-  <center><strong>!!! Treneru aizvietošana VIENAI NODARBĪBAI !!!</strong>
-</center>
+  <center><strong>!!! Treneru aizvietošana VIENAI NODARBĪBAI !!!</strong></center>
+</div>
+
+<div class="alert alert-warning">
+  <center><strong>!!! Pievienotas pogas: uz nākamo nedēļu / uz iepriekšējo nedēļu !!!</strong></center>
 </div>
 
 <script>
@@ -29,7 +32,11 @@ jQuery(document).ready(function($) {
 <tr class="clickable-row" data-href="/reception/tren/{{ forloop.counter0 }}/"><td>{{ w|date:"d M" }}</td></tr>
 {% endfor %}
 </tbody>
+</table>
+</div>
 {% else %}
+
+
 
 
 {% for dat in data %}{% for d in dat %}
@@ -65,7 +72,12 @@ jQuery(document).ready(function($) {
 </div></div></div></div>
 
 
-<a href="/reception/tren/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</button></a><br>
+<a href="/reception/tren/"><button type="button" class="btn btn" style="colour: black;"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ pie nedēļu izvēles</button></a><br>
+
+{% if pw_id %}
+<center><a href="/reception/tren/{{ pw_id }}/"><button type="button" class="btn btn" style="colour: black;">
+<span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span> Uz iepriekšējo nedēļu</button></a></center><br>
+{% endif %}
 
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
@@ -89,6 +101,15 @@ jQuery(document).ready(function($) {
  <td>{{ d.telpa }}</td>
  <td>{{ d.vietas }}</td>
 </tr>
-{% endfor %}{% endfor %}{% endif %}
+{% endfor %}{% endfor %}
 </tbody>
+</table>
+</div>
+
+{% if nw_id %}
+<center><a href="/reception/tren/{{ nw_id }}/"><button type="button" class="btn btn" style="colour: black;">
+<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span> Uz nākamo nedēļu</button></a></center><br><br>
+{% endif %}
+
+{% endif %}
 {% endblock %}
