<izcelts> nodarb color

--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -7,7 +7,7 @@ p{ padding:0px; margin:0px; text-align: left; }
 #nod{ position: relative; width: 32.7%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black;
 background-color:#ccc; float:left; overflow:hidden; }
 #nod_special{ position: relative; width: 32.7%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black;
-background-color:red; float:left; overflow:hidden; }
+background-color:#80ff80; float:left; overflow:hidden; }
 #triangle{ position:absolute; width:20px; height:20px; right:0px; bottom:0px; /* margin-bottom:1px; margin-right:1px;*/ z-index:1; }
 .modal-backdrop { opacity:0.8 !important; }
 {% endblock %}
