--- a/grafiks/templates/nod_plan.html
+++ b/grafiks/templates/nod_plan.html
@@ -9,9 +9,16 @@
   <center><strong>!!! Nodarbību atcelšana !!!</strong></center>
 </div>
 
+<div class="alert alert-danger">
+  <center>!!!!! Lai atceltu nodarbības sākot no konkrēta datuma un izņemtu no Plānotāja: !!!!!<br>
+  <strong><b>"Izmaiņas Grafikā" >> "Izņemt nodarbību no Plānotāja"</b></strong></center>
+</div>
+
+<!--
 <div class="alert alert-warning">
   <center><strong>!!! Pievienotas pogas: uz nākamo nedēļu / uz iepriekšējo nedēļu !!!</strong></center>
 </div>
+-->
 
 <script>
 jQuery(document).ready(function($) {
